* Change tuning args * Always clean in a separate step