@@ -1,7 +1,11 @@
 #!/bin/zsh
 
+function print() {
+  echo \#\#\# $* >&2
+}
+
 function print_and_run() {
-  echo ### $*
+  print $*
   CMD=$1 ; shift
   $CMD ${=*}
   if [ $? -ne 0 ] ; then
@@ -11,15 +15,21 @@ function print_and_run() {
 
 function big_build_function() {
     # maven options
-    #MAVEN_TUNING_OPTS="-server -XX:+AggressiveOpts -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:NewRatio=3"
-    MAVEN_TUNING_OPTS="-server -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:NewRatio=4"
-    MAVEN_MEMORY_OPTS="-Xmx500m -XX:MaxPermSize=200m -Xss500k -XX:+HeapDumpOnOutOfMemoryError"
+    MAVEN_TUNING_OPTS="-server -XX:+AggressiveOpts -XX:+UseCompressedOops -XX:+UseG1GC"
+    #MAVEN_TUNING_OPTS="-server -XX:+AggressiveOpts -XX:+UseCompressedOops -XX:-UseLargePages -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:NewRatio=4 -Xss500k"
+    #MAVEN_TUNING_OPTS="-server -XX:+AggressiveOpts -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:NewRatio=4 -XX:-UseLargePages"
+    #MAVEN_TUNING_OPTS="-server -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:NewRatio=4"
+    MAVEN_MEMORY_OPTS="-Xmx1024m -XX:MaxPermSize=256m -Xss500k -XX:+HeapDumpOnOutOfMemoryError"
     MAVEN_JGROUPS_OPTS="-Djava.net.preferIPv4Stack=true -Djgroups.bind_addr=127.0.0.1"
     # for tests only
     MAVEN_DEBUG_OPTS="-ea -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006"
     MAVEN_LOG_OPTS="-Dlog4j.configuration=file:/home/dan/Work/infinispan/log4j-trace.xml"
+    #MAVEN_LOG_OPTS="-Dlog4j.configurationFile=file:///home/dan/Work/infinispan/log4j2-trace.xml"
 
+    #MAVEN_OPTS="$MAVEN_TUNING_OPTS $MAVEN_JGROUPS_OPTS $EXTRA_BUILD_OPTS"
     MAVEN_OPTS="$MAVEN_TUNING_OPTS $MAVEN_MEMORY_OPTS $MAVEN_JGROUPS_OPTS $EXTRA_BUILD_OPTS"
+
+    MAVEN_FORK_OPTS="$MAVEN_OPTS $MAVEN_DEBUG_OPTS $EXTRA_TEST_OPTS -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:gc.log"
 
     LOGS_DIR=`pwd`/../logs
 
@@ -37,24 +47,30 @@ function big_build_function() {
     else
       BRANCH=`git symbolic-ref --short HEAD`
     fi
+    echo $BRANCH > $LOGS_DIR/branch
 
     PROJECT=`basename \`pwd\``
     echo Running off branch $BRANCH
     UPSTREAM_BRANCH=`find_upstream_branch $BRANCH`
 #    DEST=/tmp/privatebuild/$PROJECT/$UPSTREAM_BRANCH
-    DEST=/tmp/privatebuild/$PROJECT
+#    DEST=/tmp/privatebuild/$PROJECT
+    DEST=../privatebuild/$PROJECT
 
     if [ -z "$UPSTREAM_BRANCH" ] ; then
       return 1
     fi
 
     if [ -n "$EXPLICIT_BRANCH" ] ; then
-      print_and_run rm -r $DEST
-      print_and_run git clone -slb "$BRANCH" . $DEST
+      if [ $CLEAN_BUILD -eq 1 ] ; then
+        print_and_run rm -r $DEST
+        print_and_run git clone -slb "$BRANCH" . $DEST
+      else
+        echo Cannot test a custom branch without building and cleaning the directory >&2
+        return 2
+      fi
     else
-      print_and_run rm -r $DEST
       print_and_run mkdir -p $DEST
-      print_and_run rsync -a --delete --link-dest=. --exclude '.git' --exclude 'target' --exclude '*.log' . $DEST
+      print_and_run rsync -av --delete --link-dest=. --exclude '.git' --exclude 'target' --exclude '*.log' . $DEST
     fi
 
     print_and_run cd $DEST
@@ -75,30 +91,47 @@ function big_build_function() {
 
     ERRCODE=0
     if [ $CLEAN_BUILD -eq 1 ] ; then
-      print_and_run mvn -nsu -P-extra clean ${=MODULE_ARGS} ${=EXTRA_ARGS}
-      ERRCODE=$?
-    fi
-    if [ $ERRCODE -ne 0 ] ; then
-      return $ERRCODE
+      #CLEAN=clean
+      #print_and_run mvn -nsu clean -am ${=MODULE_ARGS}
+      print_and_run mvn -nsu clean
     fi
 
-    if [ $BUILD -eq 1 ] ; then
-      print_and_run mvn -nsu -P-extra install -DskipTests -am ${=MODULE_ARGS} ${=EXTRA_ARGS}
-      ERRCODE=$?
-    fi
-    if [ $ERRCODE -ne 0 ] ; then
-      return $ERRCODE
-    fi
 
-    if [ $TEST -eq 1 ] ; then
-      if [ $DEBUG -ne 1 ] ; then
-        MAVEN_DEBUG_OPTS=""
+    #if [ -n "$MODULE_ARGS" ] ; then
+      if [ $BUILD -eq 1 ] ; then
+        #print_and_run mvn -nsu -P-extras $CLEAN install -DskipTests -am ${=MODULE_ARGS} ${=EXTRA_ARGS}
+        print_and_run mvn -nsu install -DskipTests -am ${=MODULE_ARGS} ${=EXTRA_ARGS}
+        ERRCODE=$?
       fi
-      MAVEN_OPTS="$MAVEN_OPTS $MAVEN_DEBUG_OPTS $MAVEN_LOG_OPTS $EXTRA_TEST_OPTS" print_and_run mvn test ${=MODULE_ARGS} ${=EXTRA_ARGS}
-      ERRCODE=$?
-      return $ERRCODE
-    fi
+      if [ $ERRCODE -ne 0 ] ; then
+        return $ERRCODE
+      fi
+
+      if [ $TEST -eq 1 ] ; then
+        if [ $DEBUG -ne 1 ] ; then
+          MAVEN_DEBUG_OPTS=""
+        fi
+        print MAVEN_FORK_OPTS=$MAVEN_FORK_OPTS
+        print_and_run mvn -e -o verify -Ptest-CI ${=MODULE_ARGS} $MAVEN_LOG_OPTS ${=EXTRA_ARGS}
+        ERRCODE=$?
+        return $ERRCODE
+      fi
+    #else
+    #  if [ $DEBUG -ne 1 ] ; then
+    #    MAVEN_DEBUG_OPTS=""
+    #  fi
+    #  SKIP_TESTS=
+    #  if [ $TEST -eq 0 ] ; then
+    #    SKIP_TESTS=-DskipTests
+    #  fi
+    #  print MAVEN_FORK_OPTS=$MAVEN_FORK_OPTS
+    #  print_and_run mvn -e -nsu install -Ptest-CI $SKIP_TESTS ${=MODULE_ARGS} $MAVEN_LOG_OPTS ${=EXTRA_ARGS}
+    #  ERRCODE=$?
+    #  return $ERRCODE
+    #fi
 }
+
+print JAVA_HOME=$JAVA_HOME
 
 case `basename $0` in
   cbuild) 	big_build_function 1 1 0 0 $* ;;
